data/derived/sp14/progs/unify/prog2604.ml.out
Characters 192-200:
  let args = List.rev (List.combine (l1, l2)) in
                                    ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
